# OfficeHelper

./: .gitignore  AGENTS.md  BUILD_STEPS.txt  OfficeHelperBackend.spec  README.md  build.bat  config.json  package.md  requirements.txt  智能文档格式调整助手_-_langchain服务端模块规划_ca806860.plan.md  智能文档格式调整助手_-_项目任务书_432cb4a9.plan.md
core/: __init__.py  agent.py  config.py  format_analyzer.py  format_fixer.py  llm_service.py  screenshot_manager.py  settings.py  word_connector.py
front/: index.html  package-lock.json  package.json
front/src/: App.tsx  api.ts
front/src-tauri/: Cargo.toml  tauri.conf.json
front/src-tauri/capabilities/: default.json
front/src-tauri/src/: lib.rs  main.rs
front/src/components/: AIChat.tsx  Header.tsx  QuickActions.tsx  StatusBar.tsx
front/src/types/: index.ts
pservice/: main.py  main_backup.py  requirements.txt  start.bat
pservice/api/: __init__.py  action_registry.py  routes.py  service.py
skills/: __init__.py
skills/word-font-operation/: SKILL.md
skills/word-page-operation/: SKILL.md
skills/word-page-operator/: SKILL.md
skills/word-page-operator/scripts/: __init__.py  word_page_operator.py  word_page_operator_base.py  word_section_operator.py
skills/word-paragraph-operation/: SKILL.md
skills/word-paragraph-operator/: SKILL.md
skills/word-paragraph-operator/references/: API_REFERENCE.md
skills/word-text-operator/: SKILL.md
utils/: prompt_engineering.py  response_parser.py
word-addin/: ARCHITECTURE.md
word-addin/wordassistant/: manifest.xml  package-lock.json  package.json  webpack.config.js
(+17 files in other folders)
