[package]
name = "office-helper-front"
version = "1.0.0"
description = "OfficeHelper AI Assistant - Tauri Desktop Shell"
authors = ["OfficeHelper"]
edition = "2021"

[lib]
name = "office_helper_front_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
